# QEZRec

./: .gitignore  LICENSE  README.md  build.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: build.yml
qezrec/: __main__.py  audio.py  capture.py  config.py  encoder.py  hotkey.py  keybind_setup.py  overlay.py  recorder.py  settings.py  tray.py  window.py
