[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "qezrec"
version = "0.1.0"
description = "Quick and Ez window recording tool"
requires-python = ">=3.10"
dependencies = [
    "windows-capture>=1.5.0",
    "psutil>=5.9.0",
    "pywin32>=306",
    "numpy",
    "opencv-python-headless>=4.8.0",
    "pyaudiowpatch>=0.2.12",
    "pystray>=0.19.5",
    "Pillow>=10.0.0",
]

[project.scripts]
qezrec = "qezrec.__main__:main"
